--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,61 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(177, 68, 177);
+  font-family: 'Montserrat', sans-serif;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+h1 {
+  position: relative; top: 25px;
+  font-family: 'DotGothic16', sans-serif;
+  font-size: 4rem;
+  color: white;
+}
+
+input {
+  width: 40%;
+  border-radius: 8px;
+  background-color: rgb(201, 150, 224);
+  font-family: 'DotGothic16', sans-serif;
+  font-size: 2rem;
+  color: white;
+  text-align: center;
+  border: 1px solid purple;
+
+}
+
+button {
+  position: relative;
+  width: 15%;
+  margin-left: 5px;
+  font-size: 2rem;
+  border: 1px solid purple;
+  background-color: rebeccapurple;
+color: rgb(201, 150, 224);
+  border-radius: 8px;
+}
+
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.submit {
+background-color: rebeccapurple;
+color: rgb(201, 150, 224);
+top: -3px;
+padding: 3px;
+}
+
+.terms {
+  position: relative; top: 50px;
+  font-size: 8px;
+}
+
+
+.trademark{
+  position: absolute; right: 10px; bottom: -20px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rebeccapurple;
 }
