--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,16 @@ input {
 
 }
 
+@media screen, (min-width: 375px) {
+
+  input{
+    /* position: relative; top: 65vh; right: 0vh; */
+    font-size: 16px;
+    width: 250px;
+    height: 50px;
+  }
+ }
+
 button {
   position: relative;
   width: 15%;
@@ -40,6 +50,17 @@ button {
 color: rgb(201, 150, 224);
   border-radius: 8px;
 }
+
+@media screen, (min-width: 375px) {
+
+  button{
+    /* position: relative; top: 65vh; right: 0vh; */
+    font-size: 16px;
+    width: 100px;
+    height: 50px;
+  }
+ }
+
 
 button:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
@@ -52,10 +73,30 @@ top: -3px;
 padding: 3px;
 }
 
+
+.newq{
+  position: relative;
+}
+
+@media screen, (min-width: 375px) {
+
+  .newq{
+    /* position: relative; top: 65vh; right: 0vh; */
+  top: 30px;
+  }
+ }
+
 .terms {
   position: relative; top: 50px;
   font-size: 8px;
 }
+@media screen, (min-width: 375px) {
+
+  .terms{
+    /* position: relative; top: 65vh; right: 0vh; */
+    font-size: 8px;
+  }
+ }
 
 
 .trademark{
@@ -63,3 +104,11 @@ padding: 3px;
   font-family: Arial, Helvetica, sans-serif;
   color: rebeccapurple;
 }
+
+@media screen, (min-width: 375px) {
+
+  .trademark{
+    /* position: relative; top: 65vh; right: 0vh; */
+    bottom: -50px;
+  }
+ }
